implemented mongoMsgDB, implemented unit tests, other minor improvements
